--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=school
 spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
