--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,5 @@ spring.application.name=school
 spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
 students.avatar.dir.path=C:/Users/BAKUDO/Desktop/avatars
